force-app/main/default/objects/Leave__c/Leave__c.object-meta.xml
<CustomObject>
    <label>Leave</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Leave Purpose</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leaves</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>