force-app/main/default/objects/Leave__c/fields/Total_Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Days__c</fullName>
    <formula>DAY( To_Date__c )  -  DAY( From_Date__c ) + 1</formula>
    <label>Total Number of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>