force-app/main/default/objects/Leave__c/validationRules/From_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>From_Date</fullName>
    <active>true</active>
    <errorConditionFormula>From_Date__c   &lt;   TODAY()</errorConditionFormula>
    <errorDisplayField>From_Date__c</errorDisplayField>
    <errorMessage>From Date should be greater than equal to current date.</errorMessage>
</ValidationRule>