force-app/main/default/objects/Leave__c/validationRules/To_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>To_Date</fullName>
    <active>true</active>
    <errorConditionFormula>To_Date__c  &lt;  From_Date__c</errorConditionFormula>
    <errorDisplayField>To_Date__c</errorDisplayField>
    <errorMessage>To Date should be grater than equal to from date.</errorMessage>
</ValidationRule>