force-app/main/default/objects/Leave__c/validationRules/Total_Number_of_Days.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Number_of_Days</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Number_of_Days__c  &gt;  Employee_Name__r.Pending_Leave__c</errorConditionFormula>
    <errorMessage>Total number of days should be less than Pending Leave</errorMessage>
</ValidationRule>